# llm-observability-opik

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  create_team_documents.py  docker-compose.yml  main.py  pyproject.toml  real_madrid_qa_dataset.json
.github/workflows/: ci.yml
pipelines/: team_pipeline.py
src/: evaluate_dataset.py  generate_dataset.py
src/configs/: config.yaml  prompts.py  settings.py
src/data/eval_data/: qa_dataset.json
src/data/team_data/: atletico_madrid.md  bayern_munich.md  benfica.md  borussia_dortmund.md  chelsea_fc.md  fc_barcelona.md  inter_milan.md  manchester_city.md  paris_saint_germain.md  porto.md  real_madrid.md  salzburg.md
src/data/team_summaries/: atlético_madrid_summary.txt
src/data/team_summaries/atletico_madrid/: atletico_madrid_summary_achievements.txt  atletico_madrid_summary_default.txt  atletico_madrid_summary_recent.txt
src/data/team_summaries/bayern_munich/: bayern_munich_summary_achievements.txt  bayern_munich_summary_default.txt  bayern_munich_summary_recent.txt
src/data/team_summaries/benfica/: benfica_summary_achievements.txt  benfica_summary_default.txt  benfica_summary_recent.txt
src/data/team_summaries/borussia_dortmund/: borussia_dortmund_summary_achievements.txt  borussia_dortmund_summary_default.txt  borussia_dortmund_summary_recent.txt
src/data/team_summaries/chelsea_fc/: chelsea_fc_summary_achievements.txt  chelsea_fc_summary_default.txt  chelsea_fc_summary_recent.txt
src/data/team_summaries/fc_barcelona/: fc_barcelona_summary_achievements.txt  fc_barcelona_summary_default.txt  fc_barcelona_summary_recent.txt
src/data/team_summaries/inter_milan/: inter_milan_summary_achievements.txt  inter_milan_summary_default.txt  inter_milan_summary_recent.txt
src/data/team_summaries/manchester_city/: manchester_city_summary_achievements.txt  manchester_city_summary_default.txt  manchester_city_summary_recent.txt
src/data/team_summaries/porto/: porto_summary_default.txt  (+2 more)
src/evaluation/: evaluate_dataset_opik.py  evaluate_summaries_comet.py  evaluate_summaries_opik.py  metrics.py
src/infra/: create_collection.py  insert_embeddings.py
src/pipelines/: dataset_pipeline.py  etl_pipeline.py  summarization_pipeline.py  team_pipeline.py
src/search/: search_tracing_opik.py
src/similarity/: search.py
src/steps/etl/: crawl_step.py  mongo_ingest_step.py  parse_step.py  wikipedia_crawler.py
src/steps/generate_dataset/: generate_dataset_step.py  generate_summaries_step.py  mongo_client.py  questions.py
src/steps/generate_summaries/: generate_summaries_step.py  helpers.py
src/tests/: test_query.py
steps/: crawl_step.py  mongo_ingest_step.py  parse_step.py
team_data/: fc_barcelona.md  real_madrid.md
tests/: test_query.py
(+9 files in other folders)
